# toad

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  org.kde.tasks.desktop  org.kde.tasks.json  org.kde.tasks.metainfo.xml
.reuse/: dep5
android/: AndroidManifest.xml  build.gradle
po/ar/: toad.po
po/ast/: toad.po
po/ca/: toad.po
po/ca@valencia/: toad.po
po/cs/: toad.po
po/de/: toad.po
po/en_GB/: toad.po
po/eo/: toad.po
po/es/: toad.po
po/eu/: toad.po
po/fi/: toad.po
po/fr/: toad.po
po/ga/: toad.po
po/gl/: toad.po
po/he/: toad.po
po/hi/: toad.po
po/hu/: toad.po
po/ia/: toad.po
po/it/: toad.po
po/ja/: toad.po
po/ka/: toad.po
po/ko/: toad.po
po/lt/: toad.po
po/lv/: toad.po
po/nl/: toad.po
po/nn/: toad.po
po/pa/: toad.po
po/pl/: toad.po
po/pt/: toad.po
po/pt_BR/: toad.po
po/ru/: toad.po
po/sa/: toad.po
po/sk/: toad.po
po/sl/: toad.po
po/sv/: toad.po
po/tr/: toad.po
po/ug/: toad.po
po/uk/: toad.po
po/zh_CN/: toad.po
po/zh_TW/: toad.po
src/: CMakeLists.txt  Main.qml  about.cpp  about.h  config.kcfg  controller.cpp  controller.h  main.cpp  resources.qrc  task.cpp  task.h  tasksconfig.kcfg  tasksconfig.kcfgc  tasksmodel.cpp  tasksmodel.h
src/models/: CMakeLists.txt  task.cpp  task.h  tasksmodel.cpp  tasksmodel.h
src/ui/: About.qml  CMakeLists.txt  Footer.qml  GlobalMenu.qml  PageHeader.qml  Settings.qml  SettingsPage.qml  TasksPage.qml  Tray.qml  main.qml
